--- a/.gitignore
+++ b/.gitignore
@@ -3,5 +3,9 @@
 .Rhistory
 **/*.Rds
 results/
-.Rproj.user
 PROJECT.org
+.Rproj.user
+.Rproj.user/
+.Rproj.user/*/*
+.Rproj.user/EF330CC9/*
+.Rproj.user/EF330CC9/pcs/*
