--- a/.gitignore
+++ b/.gitignore
@@ -5,8 +5,4 @@
 results/
 PROJECT.org
 .Rproj.user
-.Rproj.user/
-.Rproj.user/*/*
-.Rproj.user/EF330CC9/*
-.Rproj.user/EF330CC9/pcs/*
-.pper
+.Rproj.user/**
